examples/test/testpolicy14625.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14625
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key7: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value37
          key20: value10
          key32: value28
      podSelector:
        matchLabels:
          key6: value28
